--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://flashvoid.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Share and enjoy
+subtitle: ... bring it to us ...
+author: Stas A. Kraev
 simple_search: https://www.google.com/search
 description:
 
